--- a/shita-hono/package.json
+++ b/shita-hono/package.json
@@ -8,10 +8,13 @@
     "@hono/node-server": "^1.13.8",
     "@prisma/client": "^5.13.0",
     "dotenv": "^16.4.7",
-    "hono": "^4.6.20"
+    "drizzle-orm": "^0.39.3",
+    "hono": "^4.6.20",
+    "mysql2": "^3.12.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
+    "jest": "^29.7.0",
     "prisma": "^5.13.0",
     "tsx": "^4.7.1"
   }
