feat: replace table component with shadcn library component #4

--- a/shita-hono/tsconfig.json
+++ b/shita-hono/tsconfig.json
@@ -2,8 +2,10 @@
   "compilerOptions": {
     "target": "ESNext",
     "module": "NodeNext",
+    "moduleResolution": "NodeNext",
+    "esModuleInterop": true,
     "strict": true,
-    "verbatimModuleSyntax": true,
+    "verbatimModuleSyntax": false,
     "skipLibCheck": true,
     "types": [
       "node"
