--- a/shita-hono/package.json
+++ b/shita-hono/package.json
@@ -21,6 +21,7 @@
     "prisma": "^5.13.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
-    "tsx": "^4.7.1"
+    "tsx": "^4.7.1",
+    "typescript": "^5.7.3"
   }
 }
