refactor: change the code post and put make hono open api #5

--- a/shita-hono/tsconfig.json
+++ b/shita-hono/tsconfig.json
@@ -12,5 +12,8 @@
     "moduleResolution": "Node",
     "jsx": "react-jsx",
     "jsxImportSource": "hono/jsx",
+//baru ditambahin buat dotenv
+    "esModuleInterop": true,
+    "resolveJsonModule": true,
   }
 }
