--- a/shita-hono/package.json
+++ b/shita-hono/package.json
@@ -7,11 +7,17 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.13.8",
+    "@hono/swagger-ui": "^0.5.1",
+    "@hono/zod-openapi": "^0.19.2",
+    "@hono/zod-validator": "^0.4.3",
     "@prisma/client": "^5.13.0",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.39.3",
     "hono": "^4.6.20",
-    "mysql2": "^3.12.0"
+    "hono-openapi": "^0.4.6",
+    "mysql2": "^3.12.0",
+    "zod": "^3.24.2",
+    "zod-openapi": "^4.2.3"
   },
   "devDependencies": {
     "@types/jest": "^29.5.14",
@@ -24,5 +30,4 @@
     "tsx": "^4.7.1",
     "typescript": "^5.7.3"
   }
-  
 }
